# recif

./: Cargo.toml  README.md
src/: aliases.rs  canonicalize.rs  cli.rs  config.rs  daemon_status.rs  denylist.rs  health.rs  keychain.rs  launch.rs  launchd.rs  lib.rs  main.rs  profile.rs  saferemove.rs  symlink.rs  tty.rs
src/commands/: add.rs  doctor.rs  list.rs  mod.rs  remove.rs  uninstall.rs
src/daemon/: mod.rs  reconcile.rs  watcher.rs
tests/: canonicalize_it.rs  profile_it.rs  reconcile_it.rs  saferemove_it.rs  symlink_it.rs
